--- a/Traductor/src/app/components/aprender/aprender.page.html
+++ b/Traductor/src/app/components/aprender/aprender.page.html
@@ -24,7 +24,7 @@
       <ion-grid>
         <ion-row>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirAnimales('traducir')">
+            <ion-card (click)="traducirSaludos('traducir')">
               <!-- <img src="../../../assets/img/saludos/hola.png" alt="Hola" /> -->
               <ion-card-header>
                 <ion-card-title>Hola</ion-card-title>
@@ -40,7 +40,7 @@
             </ion-card>
           </ion-col>
           <ion-col size="6" size-md="2">
-            <ion-card (click)="traducirAnimales('traducir')">
+            <ion-card (click)="traducirSaludos('traducir')">
               <!-- <img src="../../../assets/img/saludos/buenos dias.png" alt="Buenos días" /> -->
               <ion-card-header>
                 <ion-card-title>Buenos días</ion-card-title>
