--- a/Traductor/src/app/components/desafios/desafio-four/desafio-four.page.html
+++ b/Traductor/src/app/components/desafios/desafio-four/desafio-four.page.html
@@ -6,31 +6,31 @@
         Regresar
       </ion-button>
     </ion-buttons>
-    <ion-title>Desafío 4: Frases Comunes</ion-title>
+    <ion-title>Desafío 4: Colores y Números</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <ion-card>
     <ion-card-header>
-      <ion-card-title class="text-center">Evaluación de Frases Comunes</ion-card-title>
+      <ion-card-title class="text-center">Evaluación de Colores y Números</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <form>
+      <form (ngSubmit)="enviarRespuestas()">
         <!-- Pregunta 1 -->
         <ion-card>
           <ion-card-header>
-            <ion-card-title>1. ¿Cómo se dice "¿Dónde está el baño?" en inglés?</ion-card-title>
+            <ion-card-title>1. ¿Cómo se dice "Rojo" en Shuar?</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-radio-group>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta1" name="pregunta1">
               <ion-item>
-                <ion-label>Where is the bathroom?</ion-label>
-                <ion-radio slot="start" value="whereBathroom"></ion-radio>
+                <ion-label>Púju</ion-label>
+                <ion-radio slot="start" value="puju"></ion-radio>
               </ion-item>
               <ion-item>
-                <ion-label>Where is the kitchen?</ion-label>
-                <ion-radio slot="start" value="whereKitchen"></ion-radio>
+                <ion-label>Kapaku</ion-label>
+                <ion-radio slot="start" value="kapaku"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-card-content>
@@ -39,17 +39,17 @@
         <!-- Pregunta 2 -->
         <ion-card>
           <ion-card-header>
-            <ion-card-title>2. ¿Cómo se dice "Me llamo..." en inglés?</ion-card-title>
+            <ion-card-title>2. ¿Cómo se dice "Verde" en Shuar?</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-radio-group>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta2" name="pregunta2">
               <ion-item>
-                <ion-label>My name is...</ion-label>
-                <ion-radio slot="start" value="myName"></ion-radio>
+                <ion-label>Samék</ion-label>
+                <ion-radio slot="start" value="samek"></ion-radio>
               </ion-item>
               <ion-item>
-                <ion-label>I am...</ion-label>
-                <ion-radio slot="start" value="iAm"></ion-radio>
+                <ion-label>Ukusmakma</ion-label>
+                <ion-radio slot="start" value="ukusmakma"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-card-content>
@@ -58,17 +58,17 @@
         <!-- Pregunta 3 -->
         <ion-card>
           <ion-card-header>
-            <ion-card-title>3. ¿Cómo se dice "Por favor" en inglés?</ion-card-title>
+            <ion-card-title>3. ¿Cómo se dice "Amarillo" en Shuar?</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-radio-group>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta3" name="pregunta3">
               <ion-item>
-                <ion-label>Please</ion-label>
-                <ion-radio slot="start" value="please"></ion-radio>
+                <ion-label>Yumkumá</ion-label>
+                <ion-radio slot="start" value="yumkumá"></ion-radio>
               </ion-item>
               <ion-item>
-                <ion-label>Thank you</ion-label>
-                <ion-radio slot="start" value="thankYou"></ion-radio>
+                <ion-label>Mukúsa</ion-label>
+                <ion-radio slot="start" value="mukusa"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-card-content>
@@ -77,17 +77,17 @@
         <!-- Pregunta 4 -->
         <ion-card>
           <ion-card-header>
-            <ion-card-title>4. ¿Cómo se dice "Gracias" en inglés?</ion-card-title>
+            <ion-card-title>4. ¿Cómo se dice "Número uno" en Shuar?</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-radio-group>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta4" name="pregunta4">
               <ion-item>
-                <ion-label>Thank you</ion-label>
-                <ion-radio slot="start" value="thankYou"></ion-radio>
+                <ion-label>Chikíchik</ion-label>
+                <ion-radio slot="start" value="chikichik"></ion-radio>
               </ion-item>
               <ion-item>
-                <ion-label>Please</ion-label>
-                <ion-radio slot="start" value="please"></ion-radio>
+                <ion-label>Jímiar</ion-label>
+                <ion-radio slot="start" value="jimiar"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-card-content>
@@ -96,25 +96,128 @@
         <!-- Pregunta 5 -->
         <ion-card>
           <ion-card-header>
-            <ion-card-title>5. ¿Cómo se dice "¿Cómo se dice...?" en inglés?</ion-card-title>
+            <ion-card-title>5. ¿Cómo se dice "Número dos" en Shuar?</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-radio-group>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta5" name="pregunta5">
               <ion-item>
-                <ion-label>How do you say...?</ion-label>
-                <ion-radio slot="start" value="howSay"></ion-radio>
+                <ion-label>Jímiar</ion-label>
+                <ion-radio slot="start" value="jimiar"></ion-radio>
               </ion-item>
               <ion-item>
-                <ion-label>What is...?</ion-label>
-                <ion-radio slot="start" value="whatIs"></ion-radio>
+                <ion-label>Aíntiuk</ion-label>
+                <ion-radio slot="start" value="aintiuk"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-card-content>
+        </ion-card>
+
+        <!-- Pregunta 6 -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>6. ¿Cómo se dice "Número tres" en Shuar?</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta6" name="pregunta6">
+              <ion-item>
+                <ion-label>Ewéj</ion-label>
+                <ion-radio slot="start" value="ewej"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Menaínt</ion-label>
+                <ion-radio slot="start" value="menaint"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-card-content>
+        </ion-card>
+
+        <!-- Pregunta 7 -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>7. ¿Cómo se dice "Número cuatro" en Shuar?</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta7" name="pregunta7">
+              <ion-item>
+                <ion-label>Aíntiuk</ion-label>
+                <ion-radio slot="start" value="aintiuk"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Yarúsh</ion-label>
+                <ion-radio slot="start" value="yarush"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-card-content>
+        </ion-card>
+
+        <!-- Pregunta 8 -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>8. ¿Cómo se dice "Número cinco" en Shuar?</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta8" name="pregunta8">
+              <ion-item>
+                <ion-label>usúmtai</ion-label>
+                <ion-radio slot="start" value="usumtai"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Ewéj</ion-label>
+                <ion-radio slot="start" value="ewej"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-card-content>
+        </ion-card>
+
+        <!-- Pregunta 9 -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>9. ¿Cómo se dice "Número seis" en Shuar?</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta9" name="pregunta9">
+              <ion-item>
+                <ion-label>Ujúk</ion-label>
+                <ion-radio slot="start" value="ujuk"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Hupantí</ion-label>
+                <ion-radio slot="start" value="hupanti"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-card-content>
+        </ion-card>
+
+        <!-- Pregunta 10 -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>10. ¿Cómo se dice "Número siete" en Shuar?</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-radio-group [(ngModel)]="respuestas.pregunta10" name="pregunta10">
+              <ion-item>
+                <ion-label>amúchat</ion-label>
+                <ion-radio slot="start" value="amuchat"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Tsénkent</ion-label>
+                <ion-radio slot="start" value="Tsenkent"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-card-content>
         </ion-card>
 
         <ion-button expand="full" type="submit">Enviar Respuestas</ion-button>
-        <ion-button expand="full" routerLink="/desafio4" color="light" class="mt-2">Regresar al Desafío 4</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
+
+  <!-- Modal para mostrar el puntaje -->
+  <div id="ventanaPuntaje" class="ventana-emergente" [ngClass]="{'mostrar': mostrarVentana}">
+    <div class="contenido-ventana">
+      <h2>Puntaje Final</h2>
+      <p>Tu puntaje es: {{ puntaje }} de 10</p>
+      <ion-button (click)="cerrarVentana()">Cerrar</ion-button>
+    </div>
+  </div>
 </ion-content>
