--- a/Traductor/src/app/components/lecciones/lecciones.page.html
+++ b/Traductor/src/app/components/lecciones/lecciones.page.html
@@ -18,10 +18,10 @@
       <ion-col size="12" size-md="6">
         <ion-card class="desafio-card">
           <ion-card-header>
-            <ion-card-title class="ion-text-center text-light">Saludos en Español</ion-card-title>
+            <ion-card-title class="ion-text-center text-light">Saludos en Shuar</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p class="text-light">Practica cómo saludar correctamente en español.</p>
+            <p class="text-light">Practica cómo saludar correctamente en shuar.</p>
             <ion-button expand="block" color="success" shape="round" (click)="verDesafio1()">Ver
               Desafío</ion-button>
           </ion-card-content>
@@ -32,10 +32,10 @@
       <ion-col size="12" size-md="6">
         <ion-card class="desafio-card">
           <ion-card-header>
-            <ion-card-title class="ion-text-center text-light">Gramática Básica</ion-card-title>
+            <ion-card-title class="ion-text-center text-light">Animales</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p class="text-light">Aprende sobre los artículos, sustantivos y verbos básicos.</p>
+            <p class="text-light">Aprende sobre los diferentes tipos de animales.</p>
             <ion-button expand="block" color="primary" shape="round" (click)="verDesafio2()">Ver
               Desafío</ion-button>
           </ion-card-content>
@@ -78,10 +78,10 @@
       <ion-col size="12" size-md="6">
         <ion-card class="desafio-card">
           <ion-card-header>
-            <ion-card-title class="ion-text-center text-light">Frases Comunes</ion-card-title>
+            <ion-card-title class="ion-text-center text-light">Juegos</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p class="text-light">Frases comunes en conversaciones cotidianas.</p>
+            <p class="text-light">Aprende sobre los diferentes tipos de juegos.</p>
             <ion-button expand="block" color="tertiary" shape="round" (click)="verDesafio5()">Ver
               Desafío</ion-button>
           </ion-card-content>
